refactored reset password, login, and force reset password
