# backend/internal/data/postgres/schema/userStore/create.go
@@ -9,12 +9,10 @@ import (
 	"inspirate-consulting/internal/data/postgres/schema"
 	"inspirate-consulting/internal/errs"
 	"inspirate-consulting/internal/models"
-
-	"github.com/sethvargo/go-password/password"
 )
 
 func (r *UserRepository) CreateUser(ctx context.Context, user models.CreateUserInput, supabase_id uuid.UUID) (*models.CreateUserOutput, error) {
-	createdUser := &models.CreateUserOutput{Body: &models.User{}}
+	createdUser := &models.User{}
 	oneSecondAgo := time.Now().Add(-1 * time.Second)
 
 	query, err := schema.ReadSQLBaseScript("create_user.sql", SqlUserFiles)
@@ -30,16 +28,12 @@ func (r *UserRepository) CreateUser(ctx context.Context, user models.CreateUserI
 		supabase_id,
 		user.Body.PfpKey,
 		oneSecondAgo,
-	).Scan(&createdUser.Body.ID, &createdUser.Body.Name, &createdUser.Body.SupabaseID, &createdUser.Body.PfpKey, &createdUser.Body.ResetTime)
+	).Scan(&createdUser.ID, &createdUser.Name, &createdUser.SupabaseID, &createdUser.PfpKey, &createdUser.ResetTime)
 	if err != nil {
 		return nil, err
 	}
 
-	password, err := password.Generate(16, 4, 4, true, false)
-	if err != nil {
-		return nil, err
-	}
-	createdUser.TempPassword = password
-
-	return createdUser, nil
+	return &models.CreateUserOutput{Body: &models.CreateUserBody{
+		User: createdUser,
+	}}, nil
 }
