# backend/internal/data/postgres/schema/userStore/update_reset_time.go
@@ -10,13 +10,13 @@ import (
 	"github.com/google/uuid"
 )
 
-func (r *UserRepository) UpdateResetTime(ctx context.Context, id uuid.UUID, resetTime *time.Time) error {
+func (r *UserRepository) UpdateResetTime(ctx context.Context, supabaseID uuid.UUID, resetTime *time.Time) error {
 	query, err := schema.ReadSQLBaseScript("update_reset_time.sql", SqlUserFiles)
 	if err != nil {
 		err := errs.InternalServerError("Failed to read base query: ", err.Error())
 		return &err
 	}
 
-	_, err = r.db.Exec(ctx, query, id, resetTime)
+	_, err = r.db.Exec(ctx, query, supabaseID, resetTime)
 	return err
 }
