# backend/internal/handlers/login/login.go
@@ -5,21 +5,33 @@ import (
 	"inspirate-consulting/internal/auth"
 	"inspirate-consulting/internal/models"
 	"inspirate-consulting/internal/supabase"
+	"net/http"
 )
 
-func (h *Handler) Login(ctx context.Context, input *models.LoginInput, supabase supabase.SupabaseInterface) (*models.LoginResponse, error) {
+func (h *Handler) Login(ctx context.Context, input *models.LoginInput, supabase supabase.SupabaseInterface) (*models.LoginOutput, error) {
 	res, err := supabase.SupabaseLogin(input.Body.Email, input.Body.Password, auth.Client)
 	if err != nil {
 		return nil, err
 	}
 
-	userInput := models.FetchUserInput{}
-	userInput.ID = res.User.ID
-	user, err := h.LoginRepository.FetchUser(ctx, userInput)
+	userInput := models.FetchUserBySupabaseIDInput{}
+	userInput.SupabaseID = res.User.ID
+	user, err := h.LoginRepository.FetchUserBySupabaseID(ctx, userInput)
 	if err != nil {
 		return nil, err
 	}
 
 	res.ResetTime = user.Body.ResetTime
-	return &res, nil
+	return &models.LoginOutput{
+		SetCookie: http.Cookie{
+			Name:     "jwt",
+			Value:    res.AccessToken,
+			Path:     "/",
+			MaxAge:   res.ExpiresIn,
+			HttpOnly: true,
+			Secure:   true,
+			SameSite: http.SameSiteLaxMode,
+		},
+		Body: &res,
+	}, nil
 }
