# backend/internal/handlers/reset_password/reset_password.go
@@ -2,6 +2,7 @@ package resetpassword
 
 import (
 	"context"
+	"errors"
 	"inspirate-consulting/internal/auth"
 	"inspirate-consulting/internal/errs"
 	"inspirate-consulting/internal/models"
@@ -11,12 +12,18 @@ import (
 )
 
 func (h *Handler) ResetPassword(ctx context.Context, input *models.ResetPasswordInput, supabase supabase.SupabaseInterface) (*models.ResetPasswordResponse, error) {
-	res, err := supabase.SupabaseResetPassword(auth.Client, input.Body.NewPassword, input.UserID)
+
+	supabaseID, ok := ctx.Value("Supabase-ID").(string)
+	if !ok {
+		return nil, errors.New("could not parse supabase id correctly")
+	}
+
+	res, err := supabase.SupabaseResetPassword(auth.Client, input.Body.NewPassword, supabaseID)
 	if err != nil {
 		return nil, err
 	}
 
-	userID, err := uuid.Parse(input.UserID)
+	userID, err := uuid.Parse(supabaseID)
 	if err != nil {
 		return nil, errs.BadRequest("invalid user ID")
 	}
